--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- projects -->
     <div class="section" id="projects">
         <video id="video1" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-            <source src="img/_Corporate2_preview.mp4">
+            <source src="img/Corporate2-preview.mp4">
 
         </video>
 
